app/assets/stylesheets/components/_cards.scss
.cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 16px;
  padding: 16px;
  height: 400px;
}

.card-artwork {
  width: 100%;
  vertical-align: top;
}

.card-artist-show-art {
  vertical-align: top;
}

.intro-product {
  position: relative;
  width: 1000px;
  min-width: 350px;
  min-height: 500px;
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.show-container {
  width: 1000px;
  display: flex;
  margin: 0 auto;
  margin-bottom: 32px
}

.art-container {
  p {
    font-size: 16px;
    color: lightblue;
  }
}

.card-artwork {
  width: 200px;
}

.art-show-description {
  margin-top: 16px;
  margin-bottom: 16px;
  border-bottom: 2px solid white;
}

.artist-details {
  align-items: center;
}

.artcard-details {
  width: 800px;
  margin-left: 32px;
}

.bid-area{
  display: flex;
}
.bid-text {
  width: 75%;
}
.bid-text p {
  margin-bottom: 2px;
}

.card-bottom {
  width: 200px;
  border-radius: 3px;
  box-shadow: 0 0 5px rgb(230,230,230);
  text-align: center;
  padding: 20px;
  border: 1px solid rgb(230,230,230);
  margin-top: 32px;
}

.card-holder {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  margin-bottom: 32px;
  margin-top: 16px;
}

